--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,5 +215,15 @@
     <string name="nav_export">Export settings</string>
     <string name="nav_import">Import settings</string>
     <string name="de_lang">German language</string>
+    <string name="openapsma_targetrange_label">APS target BG range</string>
+    <string name="openapsma_low_summary">The minimum value you consider to be in range.</string>
+    <string name="openapsma_high_summary">The maximum value you consider to be in range.</string>
+    <string name="openapsma_low_title">Low Value</string>
+    <string name="openapsma_high_title">High Value</string>
+    <string name="openapsma_apslimits_label">APS Limits</string>
+    <string name="openapsma_maxbasal_summary">Max U/hr a Temp Basal can be set to</string>
+    <string name="openapsma_maxiob_summary">Maximum amount of non-bolus IOB OpenAPS can deliver</string>
+    <string name="openapsma_maxbasal_title">Max Basal</string>
+    <string name="openapsma_maxbasaliob_title">Max Basal IOB</string>
 
 </resources>
