--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,5 +225,6 @@
     <string name="openapsma_maxiob_summary">Maximum amount of non-bolus IOB OpenAPS can deliver</string>
     <string name="openapsma_maxbasal_title">Max Basal</string>
     <string name="openapsma_maxbasaliob_title">Max Basal IOB</string>
+    <string name="bg_lang">Bulgarian</string>
 
 </resources>
