--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -218,4 +218,6 @@
     <string name="openapsma_maxiob_summary">Maximální nebolusové IOB, které může OpenAPS použít</string>
     <string name="openapsma_targetrange_label">Cílový rozsah pro OpenAPS</string>
     <string name="bg_lang">Bulgarian</string>
+    <string name="testalarm">Test alarmu</string>
+    <string name="dismiss">POTVRDIT</string>
 </resources>
