DanaR preferences & preferences cleanup

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AndroidAPS</string>
-    <string name="closedloop">Closed Loop</string>
-    <string name="openloop">Otevřená smyčka</string>
-    <string name="alert">Аларма</string>
     <string name="apsmode_title">APS режим</string>
     <string name="avgdelta">Ср. изменение</string>
     <string name="basal">Базал</string>
@@ -68,154 +65,15 @@
     <string name="en_lang">English</string>
     <string name="entertreatmentquestion">Ново действие</string>
     <string name="glucose">КЗ:</string>
-    <string name="limits_title">Лимит</string>
-    <string name="loop">Smyčka</string>
-    <string name="loop_aps_label">APS</string>
-    <string name="loop_constraintsprocessed_label">Po zpracování omezení</string>
-    <string name="loop_setbypump_label">Nastaveno pumpou</string>
-    <string name="loopdisabled">SMYČKA ZAKÁZÁNA OMEZENÍM</string>
-    <string name="lowsuspend">Low Suspend</string>
-    <string name="lowsuspend_low_title">Hodnota nízké glykémie</string>
-    <string name="manualenacts">Ručně spuštěno</string>
-    <string name="lowsuspend_lowprojected">Předpokládaná nízká glykémie:</string>
-    <string name="maxbasal_summary">Max U/h dočasného bázálu jsou</string>
-    <string name="maxbasal_title">Max bazál</string>
-    <string name="maxbasaliob_summary">Maximální množství nebolusového IOB, které může OpenAPS používat</string>
-    <string name="maxbasaliob_title">Maximální bazální IOB</string>
-    <string name="minago">min zpět</string>
-    <string name="minimalduration">Minimální trvání</string>
-    <string name="nav_backup">Záloha</string>
-    <string name="nav_exit">Ukončit</string>
-    <string name="nav_preferences">Nastavení</string>
-    <string name="nav_refreshtreatments">Aktualizuj ošetření z NS</string>
-    <string name="nav_resetdb">Inicializuj databáze</string>
-    <string name="nav_test_alarm">Test alarmu</string>
-    <string name="noapsselected">ŽÁDNÉ APS NEVYBRÁNO NEBO NEVRÁTILO VÝSLEDEK</string>
-    <string name="nochangerequested">Změna nepožadována</string>
-    <string name="noprofile">Dosud nebyl načten profil z NS</string>
-    <string name="ns_sync_use_absolute_summary">Používat absolutní hodnoty místo procent při nahrávání do NS</string>
-    <string name="ns_sync_use_absolute_title">Použít absolutní hodnoty</string>
-    <string name="nsclient">NSClient</string>
-    <string name="nsprofileview_activeprofile_label">Aktivní profil:</string>
-    <string name="nsprofileview_basal_label">Bazál:</string>
-    <string name="nsprofileview_dia_label">Trvání inzulínu:</string>
-    <string name="nsprofileview_ic_label">Inzulínosacharidový poměr:</string>
-    <string name="nsprofileview_noprofile_text">ŽÁDNÝ PROFIL NENASTAVEN</string>
-    <string name="nsprofileview_target_label">Cíl:</string>
-    <string name="nsprofileview_units_label">Jednotky:</string>
-    <string name="objectives">Cíle</string>
-    <string name="objectives_button_start">Začátek</string>
-    <string name="objectives_button_verify">Kontrola</string>
-    <string name="objectives_gate_label_string">Splnit:</string>
-    <string name="objectives_objective_label_string">Cíl:</string>
-    <string name="ok">OK</string>
-    <string name="openapsma_currenttemp_label">Součaný bazál</string>
-    <string name="openapsma_disabled">Modul zakázán</string>
-    <string name="openapsma_glucosestatus_label">Vstupní glykémie</string>
-    <string name="openapsma_inputparameters_label">Vstupní parametry</string>
-    <string name="openapsma_iobdata_label">IOB data</string>
-    <string name="openapsma_lastenact_label">Poslední provedení</string>
-    <string name="openapsma_lastrun_label">Poslední spuštění</string>
-    <string name="openapsma_mealdata_label">Data o jídle</string>
-    <string name="openapsma_minbg_label">Cílová nízká glykémie</string>
-    <string name="openapsma_noglucosedata">Nedostupná data o glykémiích</string>
-    <string name="openapsma_noprofile">Nedostupný profil</string>
-    <string name="openapsma_nopump">Žádná pumpa</string>
-    <string name="openapsma_profile_label">Profil</string>
-    <string name="openapsma_request_label">Požadavek</string>
-    <string name="openapsma_result_label">Výsledek</string>
-    <string name="openapsma_run">Sputit teď</string>
-    <string name="openloop_newsuggestion">Dostupné nové doporučení</string>
-    <string name="overview">Přehled</string>
-    <string name="overview_calculator_label">Kalkulačka</string>
-    <string name="overview_newtempbasal_basal_label">Hodnota bazálu</string>
-    <string name="overview_newtempbasal_percent_label">% (100% = současný)</string>
-    <string name="overview_bolus_label">Bolus</string>
-    <string name="profileviewer">NS profil</string>
-    <string name="pumpstatusavailableinns">Stav pumpy dostupný v NS</string>
-    <string name="rate">Hodnota:</string>
-    <string name="reason">Zdůvodnění:</string>
-    <string name="refreshfromnightscout">Opravdu aktualizovat ošetření z NS</string>
-    <string name="safety">Bezpečnost</string>
-    <string name="safety_useextended_summary">Použít kombo bolusy pro bazály větší než 100%</string>
-    <string name="safety_useextended_title">Použít kombo bolusy</string>
-    <string name="setextendedbolusquestion">Spustit nový kombo bolus:</string>
-    <string name="setbasalquestion">Spustit nový dočasný bazál:</string>
-    <string name="simpleprofile">Jednoduchý profil</string>
-    <string name="tempbasals">Dočasné bazály</string>
-    <string name="tempbasals_iob_label_string">IOB:</string>
-    <string name="tempbasals_iobtotal_label_string">Celkové IOB:</string>
-    <string name="tempbasals_netinsulin_label_string">Inz:</string>
-    <string name="tempbasals_netratio_label_string">Hodn:</string>
-    <string name="tempbasals_realduration_label_string">Trv:</string>
-    <string name="title_activity_preferences">Nastavení</string>
-    <string name="treatmentdeliveryerror">Chyba podání bolusu</string>
-    <string name="treatments">Ošetření</string>
-    <string name="treatments_activity_string">Aktivita:</string>
-    <string name="treatments_carbs_label_string">Sacharidy:</string>
-    <string name="treatments_insulin_label_string">Inzulín:</string>
-    <string name="treatments_iob_label_string">IOB:</string>
-    <string name="treatments_iobactivitytotal_label_string">Celková aktivita IOB:</string>
-    <string name="treatments_iobtotal_label_string">Celkové IOB:</string>
-    <string name="treatments_newtreatment_carbsamount_label">Množtví sacharidů</string>
-    <string name="treatments_newtreatment_insulinamount_label">Množství inzulínu</string>
-    <string name="treatments_wizard_basaliob_label">Bazální IOB</string>
-    <string name="treatments_wizard_bg_label">Glykémie</string>
-    <string name="treatments_wizard_bolusiob_label">Bolusové IOB</string>
-    <string name="treatments_wizard_carbs_label">Sacharidy</string>
-    <string name="treatments_wizard_correction_label">Korekce</string>
-    <string name="treatments_wizard_total_label">CELKEM</string>
-    <string name="treatments_wizard_unit_label">U</string>
-    <string name="treatmentssafety_maxbolus_title">Max. povolený bolus</string>
-    <string name="treatmentssafety_maxcarbs_title">Max. povolené sacharidy</string>
-    <string name="treatmentssafety_title">Bezpečnost zadání ošetřeni</string>
-    <string name="unsupportedclientver">Nepodporovaná verze NSClient</string>
-    <string name="virtualpump">Virtualní pumpa</string>
-    <string name="virtualpump_basebasalrate_label">Základní hodnota bazálu:</string>
-    <string name="virtualpump_battery_label">Baterie:</string>
-    <string name="virtualpump_extendedbolus_label">Kombo bolus:</string>
-    <string name="virtualpump_reservoir_label">Zásobník:</string>
-    <string name="virtualpump_resultok">OK</string>
-    <string name="virtualpump_sqlerror">Chyba databáze</string>
-    <string name="virtualpump_tempbasal_label">Dočasný bazál:</string>
-    <string name="vitualpump_label">VIRTUÁLNÍ PUMPA</string>
-    <string name="xdrip">xDrip</string>
-    <string name="overview_extendedbolus_button">Kombo bolus</string>
-    <string name="overview_tempbasal_button">Dočasný bazál</string>
-    <string name="nsprofileview_isf_label">Citlivost:</string>
-    <string name="nsclientnotinstalled">NSClient není nainstalován. Záznam je ztracen!</string>
-    <string name="lowsuspend_lowprojectedmessage">Předpokládaná nízká glykémie: Dočasný bazál 0%</string>
-    <string name="lowsuspend_lowmessage">Nízká glykémie: Dočasný bazál 0%</string>
-    <string name="lowsuspend_cancelmessage">Low Suspend: Zrušení dočasného bazálu</string>
-    <string name="lowsuspend_low">Low Suspend:</string>
     <string name="careportal_newnstreatment_eventtype">Тип събитие</string>
     <string name="careportal_newnstreatment_glucosetype">КЗ тип</string>
-    <string name="title_activity_main">AndroidAPS</string>
-    <string name="openapsma">OpenAPS MA</string>
     <string name="configbuilder_nightscoutversion_label">Nightscout версия:</string>
     <string name="configbuilder_nsclientversion_label">NSClient версия:</string>
-    <string name="send">POSLAT</string>
-    <string name="missing">Chybí</string>
-    <string name="enabled">Enabled</string>
-    <string name="visible">Viditelný</string>
-    <string name="up">Nahoru</string>
     <string name="exported">Настройките са експортирани</string>
-    <string name="setting_imported">Nastavení importováno</string>
     <string name="import_from">Импортирай настройки от:</string>
     <string name="filenotfound">Файлът не съществува</string>
     <string name="export_to">Експортирай настройки до</string>
-    <string name="nav_export">Exportovat nastavení</string>
-    <string name="nav_import">Importovat nastavení</string>
     <string name="de_lang">German</string>
-    <string name="openapsma_apslimits_label">Limity APS</string>
-    <string name="openapsma_high_summary">Maximální hodnota ještě v rozsahu</string>
-    <string name="openapsma_high_title">Horní limit</string>
-    <string name="openapsma_low_summary">Minimální hodnota ještě v rozsahu</string>
-    <string name="openapsma_low_title">Dolní limit</string>
-    <string name="openapsma_maxbasal_summary">Maximální povolený bazál [U/h]</string>
-    <string name="openapsma_maxbasal_title">Maximální bazál</string>
-    <string name="openapsma_maxbasaliob_title">Maximální IOB z bazálů</string>
-    <string name="openapsma_maxiob_summary">Maximální nebolusové IOB, které může OpenAPS použít</string>
-    <string name="openapsma_targetrange_label">Cílový rozsah pro OpenAPS</string>
     <string name="bg_lang">български</string>
+    <string name="nightscout">Nightscout</string>
 </resources>
