--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -23,8 +23,6 @@
     <string name="tempbasals_netinsulin_label_string">Ins:</string>
     <string name="tempbasals_netratio_label_string">Ratio:</string>
     <string name="tempbasals_realduration_label_string">Dur:</string>
-    <string name="title_activity_main">AndroidAPS</string>
-    <string name="title_activity_preferences">Einstellungen</string>
     <string name="treatmentdeliveryerror">Bolus Abgabefehler</string>
     <string name="virtualpump_battery_label">Batterie:</string>
     <string name="virtualpump_resultok">OK</string>
@@ -121,8 +119,7 @@
     <string name="simpleprofile">Einfaches Profil</string>
     <string name="setextendedbolusquestion">Setze neuen extended Bolus:</string>
     <string name="setbasalquestion">Akzeptiere neue temp Basalrate:</string>
-    <string name="safety_useextended_title">Benutze extended Bolus</string>
-    <string name="safety_useextended_summary"><![CDATA[Benutze extended Bolus für hohe temps (\>200%)]]></string>
+    <string name="danar_useextended_title">Benutze extended Bolus für hohe temps (\>200%)></string>
     <string name="refreshfromnightscout">Möchtest du die Treatments von Nightscout abrufen</string>
     <string name="pumpstatusavailableinns">Pumpen Status verfügbar in NS</string>
     <string name="overview_newtempbasal_percent_label">% (100% = current)</string>
@@ -147,8 +144,7 @@
     <string name="objectives">Objectives</string>
     <string name="nsprofileview_noprofile_text">KEIN PROFIL GESETZT</string>
     <string name="nsclientnotinstalled">NSClient nicht installiert. Record lost!</string>
-    <string name="ns_sync_use_absolute_title">Benutze absolute Werte</string>
-    <string name="ns_sync_use_absolute_summary">Use absolute basal values instead of percent in upload to NS</string>
+    <string name="ns_sync_use_absolute_title">Use absolute basal values instead of percent in upload to NS</string>
     <string name="noprofile">Bisher noch kein Profil von NS geladen</string>
     <string name="nochangerequested">No change requested</string>
     <string name="noapsselected">NO APS SELECTED OR PROVIDED RESULT</string>
@@ -179,20 +175,15 @@
     <string name="loopdisabled">LOOP DISABLED BY CONSTRAINTS</string>
     <string name="loop_constraintsprocessed_label">After processed constraints</string>
     <string name="loop">Loop</string>
-    <string name="limits_title">Limits</string>
     <string name="lowsuspend_low_title">Low BG threshold</string>
     <string name="lowsuspend_lowmessage">LOW: Temp basal 0%</string>
     <string name="lowsuspend_lowprojected">Low projected:</string>
     <string name="lowsuspend_lowprojectedmessage">LOW PROJECTED: Temp basal 0%</string>
     <string name="manualenacts">Manual enacts</string>
-    <string name="maxbasal_summary">Max U/hr of Temp Basal can be set to</string>
     <string name="carbsconstraintapplied">Carbs constraint applied</string>
     <string name="nav_resetdb">Reset Datenbanken</string>
     <string name="minimalduration">Minimale Dauer</string>
-    <string name="maxbasaliob_title">Max basal IOB</string>
     <string name="minago">min ago</string>
-    <string name="maxbasaliob_summary">Maximum amount of non-bolus IOB OpenAPS can deliver</string>
-    <string name="maxbasal_title">Max basal</string>
     <string name="nav_refreshtreatments">Erneure treatments von NS</string>
     <string name="nav_exit">Exit</string>
     <string name="missing">Fehlend</string>
@@ -205,17 +196,11 @@
     <string name="setting_imported">Einstellungen importiert</string>
     <string name="nav_export">Einstellungen exportieren</string>
     <string name="nav_import">Einstellungen importieren</string>
-    <string name="alert">Alarm</string>
     <string name="de_lang">Deutsch</string>
-    <string name="openapsma_apslimits_label">APS Limit</string>
-    <string name="openapsma_high_title">Hoher Wert</string>
-    <string name="openapsma_low_title">Niedriger Wert</string>
-    <string name="openapsma_maxbasal_title">Max Basal</string>
-    <string name="openapsma_maxbasaliob_title">Max Basal IOB</string>
-    <string name="openapsma_targetrange_label">APS Zielbereich</string>
     <string name="openapsma_maxbasal_summary">Max U/hr die man für eine Temp Basal setzen kann</string>
     <string name="openapsma_maxiob_summary">Maximale Menge von nicht bolus IOB die OpenAPs abgeben kann</string>
     <string name="openapsma_high_summary">Maximalwert für deinen persönlichen Zielbereich.</string>
     <string name="openapsma_low_summary">Minimalwert für deinen persönlichen Zielbereich.</string>
     <string name="bg_lang">Bulgarian</string>
+    <string name="nightscout">Nightscout</string>
 </resources>
